# chisel-sculpt

./: .gitignore  CHANGES.md  CMakeLists.txt  LICENSE  MANUAL.md  README.md
.github/workflows/: linux.yml  windows.yml
cmake/: embed_shaders.cmake  patch_webgpu_glue.py
include/: brush.h  brush_alpha.h  camera.h  chisel_debug.h  compute.h  entity_gpu.h  entity_record.h  icon_data.h  input.h  insert_controller.h  mc_tables.h  mesh.h  mesh_entity.h  multires_gpu.h  multires_stack.h  project_file.h  project_file_v1.h  remesh.h  renderer.h  scene.h  sdf.h  tablet.h  text_overlay.h  ui_overlay.h  undo.h
include/glad/: glad.h
include/gpu/: gpu.h
packaging/: AppRun  build-appimage.sh  chisel.desktop
packaging/web/: pack-itch.sh  shell.html
shaders/glsl/: cascade_disp_apply.comp  cascade_frames.comp  cascade_midpoint.comp  cascade_normals.comp  cascade_relocate.comp  color_paint.comp  color_smooth.comp  compute_normals.comp  crease_accum.comp  density_colormap.comp  density_paint.comp  density_smooth.comp  draw_accum.comp  draw_accum_symmetrize.comp  draw_apply.comp  draw_mirror_apply.comp  find_pinned.comp  grow_selection.comp  limb_drag.comp  limb_relax.comp  mask_paint.comp  mask_smooth.comp  mirror_project.comp  mirror_selection.comp  move_apply.comp  move_capture.comp  move_weight_smooth.comp  multires_apply.comp  multires_diff.comp  pinch_accum.comp  remesh_smooth.comp  sdf_count.comp  sdf_expand.comp  sdf_mc.comp  sdf_nets.comp  sdf_sign.comp  seam_snap.comp  seam_weld.comp  select_stretched.comp  select_unmasked.comp  (+5 more)
shaders/wgsl/: CONVENTIONS.md  cascade_disp_apply.wgsl  cascade_frames.wgsl  cascade_midpoint.wgsl  cascade_normals.wgsl  cascade_relocate.wgsl  color_paint.wgsl  color_smooth.wgsl  compute_normals.wgsl  crease_accum.wgsl  density_colormap.wgsl  density_paint.wgsl  density_smooth.wgsl  draw_accum.wgsl  draw_accum_symmetrize.wgsl  draw_apply.wgsl  draw_mirror_apply.wgsl  find_pinned.wgsl  grow_selection.wgsl  limb_drag.wgsl  limb_relax.wgsl  mask_paint.wgsl  mask_smooth.wgsl  mirror_project.wgsl  mirror_selection.wgsl  move_apply.wgsl  move_capture.wgsl  move_weight_smooth.wgsl  multires_apply.wgsl  multires_diff.wgsl  pinch_accum.wgsl  remesh_smooth.wgsl  sdf_count.wgsl  sdf_expand.wgsl  sdf_mc.wgsl  sdf_nets.wgsl  sdf_sign.wgsl  seam_snap.wgsl  seam_weld.wgsl  select_stretched.wgsl  (+6 more)
src/: brush.cpp  brush_alpha.cpp  camera.cpp  compute_alpha.cpp  compute_cascade.cpp  compute_color.cpp  compute_common.cpp  compute_crease_pinch.cpp  compute_density.cpp  compute_draw.cpp  compute_limb.cpp  compute_mask.cpp  compute_move.cpp  compute_multires.cpp  compute_remesh.cpp  compute_smooth.cpp  glad.c  input.cpp  insert_controller.cpp  main.cpp  mesh.cpp  multires_gpu.cpp  multires_stack.cpp  project_file.cpp  project_file_v1.cpp  remesh.cpp  renderer.cpp  scene.cpp  sdf.cpp  sphere.cpp  tablet.cpp  text_overlay.cpp  ui_overlay.cpp  undo.cpp  window_icon.cpp
src/gpu/: gl_backend.cpp  gl_compute_test.cpp  webgpu_backend.cpp  wgpu_probe.cpp  wgpu_window.cpp
